src/tests/select/snapshots/ciboulette2pg__tests__select__select_one_to_one_relationships_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_favorite_color_data_0" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    "public"."peoples"."id" :: TEXT AS "related_id",
    $1 :: TEXT AS "related_type",
    $2 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "public"."peoples" ON "public"."peoples"."favorite_color" = "public"."favorite_color"."id"
  WHERE
    "public"."peoples"."id" = $3
),
"cte_rel_peoples_data_1" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $5
) (
  SELECT
    "cte_favorite_color_data_0"."id",
    "cte_favorite_color_data_0"."type",
    "cte_favorite_color_data_0"."data",
    "cte_favorite_color_data_0"."related_type",
    "cte_favorite_color_data_0"."related_id"
  FROM
    "cte_favorite_color_data_0"
);
