src/tests/select/snapshots/ciboulette2pg__tests__select__select_related_record_single_rels_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_favorite_color_data_0" AS (
  SELECT
    "public"."favorite_color"."id" :: TEXT AS "id",
    "public"."favorite_color"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT($2, "public"."favorite_color"."color") AS "data"
  FROM
    "public"."favorite_color"
    INNER JOIN "public"."peoples" ON "public"."peoples"."favorite_color" = "public"."favorite_color"."id"
  WHERE
    "public"."peoples"."id" = $3
)(
  SELECT
    "cte_favorite_color_data_0"."id",
    "cte_favorite_color_data_0"."type",
    "cte_favorite_color_data_0"."data",
    "cte_favorite_color_data_0"."related_type",
    "cte_favorite_color_data_0"."related_id"
  FROM
    "cte_favorite_color_data_0"
);
